tests/fail/not_openapitype.stderr
error[E0277]: the trait bound `Bar: OpenapiType` is not satisfied
   --> $DIR/not_openapitype.rs:3:10
    |
3   | #[derive(OpenapiType)]
    |          ^^^^^^^^^^^ the trait `OpenapiType` is not implemented for `Bar`
    |
note: required by `schema`
   --> $DIR/lib.rs:146:2
    |
146 |     fn schema() -> OpenapiSchema;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: this error originates in the derive macro `OpenapiType` (in Nightly builds, run with -Z macro-backtrace for more info)
